# leet_code

./: CMakeLists.txt  README.md  compile_commands.json  intersection_example.cpp
.cache/clangd/index/: closeStrings.cpp.A5AD09B56CE890CA.idx  compress.cpp.0118752980DCA9AC.idx  equalPairs.cpp.251591D6A532C0BB.idx  findDifference.cpp.F14CD6D726CDF36E.idx  findMaxAverage.cpp.6D51F6A8418BD679.idx  isSubsequence.cpp.C82088FF1CDA9951.idx  largestAltitude.cpp.4BAE48470BE9D272.idx  longestOnes(tle).cpp.C611ECC2F4919E5A.idx  longestOnes.cpp.B19A745F29EDE799.idx  longestSubarray.cpp.84EFE7D7EBF1E4B1.idx  maxArea.cpp.BD4BB640E516097C.idx  maxOperations.cpp.0A4E96C80781F76E.idx  maxOperations_two_pointers.cpp.796C3ED57EBA3C7F.idx  maxVowels.cpp.B37134A8E1D46BF7.idx  moveZeroes.cpp.658BD71A4B2CDC56.idx  pivotIndex.cpp.202516A0E99C0FD9.idx  pivotIndex_0(n^2).cpp.DE34D1D608591283.idx  two_sums.c.F1D287A3FA7590D8.idx  two_sums.cpp.94F6A40F5C54F3ED.idx  uniqueOccurrences.cpp.C3B52B456D36B310.idx
01/: run_two_sums.py  test_name.py  two_sums
02/: COPY_THIS_TO_LEETCODE.py  LEETCODE_INSTRUCTIONS.txt  add_two_numbers.py  debug_your_algorithm.py  error_explanation.py  leetcode_correct_solution.py  leetcode_ready_solution.py  leetcode_test.py  real_problem_analysis.py  simple_test.py  test_add_two_numbers.py  test_complete.py
05/: longestPalindrome.py  test_longestPalindrome.py  testing.py
1768/: mergeAlternately.py  optimized.py
Leetcode_75/: 1432.py  asteroidCollision.cpp  canPlaceFlowers.py  closeStrings.cpp  compress.cpp  compress.py  equalPairs.cpp  equalPairs_bruteforce.cpp  findDifference.cpp  findMaxAverage  findMaxAverage.cpp  gcdOfStrings.py  increasingTriplet.py  increasingTriplet_demo.ipynb  isSubsequence.cpp  kidsWithCandies.py  largestAltitude.cpp  longestOnes(tle).cpp  longestOnes.cpp  longestSubarray.cpp  maxArea.cpp  maxOperations.cpp  maxOperations_two_pointers.cpp  maxVowels.cpp  moveZeroes.cpp  pivotIndex.cpp  pivotIndex_0(n^2).cpp  productExceptSelf.py  removeStars.cpp  reverseVowels.py  reverseWords.py  uniqueOccurrences.cpp
Leetcode_75/findMaxAverage.dSYM/Contents/: Info.plist
Leetcode_75/findMaxAverage.dSYM/Contents/Resources/DWARF/: findMaxAverage
Leetcode_75/findMaxAverage.dSYM/Contents/Resources/Relocations/aarch64/: findMaxAverage.yml
Leetcode_75/output/: asteroidCollision  compress  equalPairs  findMaxAverage  isSubsequence  longestOnes  maxVowels  removeStars
Leetcode_75/output/Contents/Resources/DWARF/: findMaxAverage
Leetcode_75/output/asteroidCollision.dSYM/Contents/Resources/DWARF/: asteroidCollision
Leetcode_75/output/asteroidCollision.dSYM/Contents/Resources/Relocations/aarch64/: asteroidCollision.yml
Leetcode_75/output/compress.dSYM/Contents/Resources/DWARF/: compress
Leetcode_75/output/compress.dSYM/Contents/Resources/Relocations/aarch64/: compress.yml
Leetcode_75/output/equalPairs.dSYM/Contents/Resources/DWARF/: equalPairs
Leetcode_75/output/equalPairs.dSYM/Contents/Resources/Relocations/aarch64/: equalPairs.yml
Leetcode_75/output/findMaxAverage.dSYM/Contents/: Info.plist
Leetcode_75/output/findMaxAverage.dSYM/Contents/Resources/DWARF/: findMaxAverage
Leetcode_75/output/findMaxAverage.dSYM/Contents/Resources/Relocations/aarch64/: findMaxAverage.yml
Leetcode_75/output/isSubsequence.dSYM/Contents/: Info.plist
Leetcode_75/output/isSubsequence.dSYM/Contents/Resources/DWARF/: isSubsequence
Leetcode_75/output/isSubsequence.dSYM/Contents/Resources/Relocations/aarch64/: isSubsequence.yml
Leetcode_75/output/longestOnes.dSYM/Contents/Resources/DWARF/: longestOnes
Leetcode_75/output/longestOnes.dSYM/Contents/Resources/Relocations/aarch64/: longestOnes.yml
Leetcode_75/output/maxVowels.dSYM/Contents/Resources/DWARF/: maxVowels
Leetcode_75/output/maxVowels.dSYM/Contents/Resources/Relocations/aarch64/: maxVowels.yml
Leetcode_75/output/removeStars.dSYM/Contents/Resources/DWARF/: removeStars
Leetcode_75/output/removeStars.dSYM/Contents/Resources/Relocations/aarch64/: removeStars.yml
problems/01/: import_test.py  learingclass.py  two_sums.c  two_sums.cpp  two_sums.py  two_sums_c  two_sums_double_loop.py
problems/01/algorithm_overview/: sliding_window_explained.ipynb
problems/02/: complete_init_demo.py  final_leetcode_test.py  init_examples.py  test_your_algorithm.py  your_algorithm_fixed.py
problems/03/: Longest_substring
problems/04/: findMedianSortedArrays.py
problems/05/: simple_example.py
sytax_overview/: cpp_syntax_for_python_devs.ipynb
